# delivery/delivery-domain/src/main/java/pl/com/gymtech/courierspring/entity/DriverDomain.java
@@ -1,35 +1,0 @@
-package pl.com.gymtech.courierspring.entity;
-
-import lombok.*;
-
-import javax.persistence.*;
-
-@Entity
-@Table(name = "drivers")
-@NoArgsConstructor
-@AllArgsConstructor
-@Getter
-@Setter
-public class DriverDomain {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @Column(name = "driver_id")
-    private Long id;
-
-    @Column(name = "first_name", nullable = false)
-    private String firstName;
-
-    @Column(name = "last_name", nullable = false)
-    private String lastName;
-
-    @Column(name = "email", nullable = false)
-    private String email;
-
-    @Column(name = "phone", nullable = false)
-    private String phone;
-
-    @Column(name = "address_id", nullable = false)
-    private Long addressId;
-
-}
