# delivery/delivery-schema/src/main/resources/openapi/courier.yaml
@@ -1,141 +1,96 @@
-openapi: "3.0.0"
+openapi: "3.0.1"
 info:
   title: "Courier API"
   version: "1.0.0"
+servers:
+  - url: http://localhost:8080/api
+    description: Local server
 paths:
-  /addresses:
-    get:
-      summary: Pobierz wszystkie adresy
-      responses:
-        '200':
-          description: Lista adresów
-    post:
-      summary: Dodaj nowy adres
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Address"
-      responses:
-        '201':
-          description: Adres został dodany
-  /addresses/{id}:
-    get:
-      summary: Pobierz adres o określonym identyfikatorze
-      parameters:
-        - name: id
-          in: path
-          description: Identyfikator adresu do pobrania
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: Szczegóły adresu
-        '404':
-          description: Nie znaleziono adresu o podanym identyfikatorze
-    put:
-      summary: Zaktualizuj adres o określonym identyfikatorze
-      parameters:
-        - name: id
-          in: path
-          description: Identyfikator adresu do zaktualizowania
-          required: true
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Address"
-      responses:
-        '200':
-          description: Adres został zaktualizowany
-        '404':
-          description: Nie znaleziono adresu o podanym identyfikatorze
-    delete:
-      summary: Usuń adres o określonym identyfikatorze
-      parameters:
-        - name: id
-          in: path
-          description: Identyfikator adresu do usunięcia
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '204':
-          description: Adres został usunięty
-        '404':
-          description: Nie znaleziono adresu o podanym identyfikatorze
   /customers:
     get:
       summary: Pobierz wszystkich klientów
+      operationId: getAllCustomers
       responses:
         '200':
           description: Lista klientów
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CustomerDTO'
     post:
       summary: Dodaj nowego klienta
+      operationId: saveCustomer
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Customer"
+              $ref: "#/components/schemas/CustomerDTO"
       responses:
         '201':
           description: Klient został dodany
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CustomerDTO'
   /customers/{id}:
     get:
       summary: Pobierz klienta o określonym identyfikatorze
+      operationId: getCustomerById
       parameters:
         - name: id
           in: path
           description: Identyfikator klienta do pobrania
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: Szczegóły klienta
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CustomerDTO'
         '404':
           description: Nie znaleziono
     put:
-      summary: Zaktualizuj adres o określonym identyfikatorze
+      summary: Zaktualizuj klienta o określonym identyfikatorze
+      operationId: updateCustomerById
       parameters:
         - name: id
           in: path
           description: Identyfikator adresu do zaktualizowania
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Customer"
+              $ref: "#/components/schemas/CustomerDTO"
       responses:
         '200':
           description: Klient został zaktualizowany
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CustomerDTO'
         '404':
           description: Nie znaleziono klienta o podanym identyfikatorze
     delete:
       summary: Usuń klienta o określonym identyfikatorze
+      operationId: deleteCustomerById
       parameters:
         - name: id
           in: path
           description: Identyfikator klienta do usunięcia
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+
       responses:
         '204':
           description: Klient został usunięty
@@ -144,65 +99,87 @@ paths:
   /orders:
     get:
       summary: Pobierz wszystkie zamówienia
+      operationId: getAllOrders
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OrderDTO'
     post:
       summary: Dodaj nowe zamówienie
+      operationId: createOrder
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Order'
+              $ref: '#/components/schemas/OrderDTO'
       responses:
         '201':
           description: Stworzono
-
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDTO'
   /orders/{id}:
     get:
       summary: Pobierz zamówienie o określonym identyfikatorze
+      operationId: getOrderById
       parameters:
         - name: id
           in: path
           required: true
           description: Identyfikator zamówienia
           schema:
-            type: integer
+            type: string
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDTO'
         '404':
           description: Nie znaleziono zamówienia o podanym identyfikatorze
     put:
       summary: Zaktualizuj zamówienie o określonym identyfikatorze
+      operationId: updateOrderById
       parameters:
         - name: id
           in: path
           required: true
           description: Identyfikator zamówienia
           schema:
-            type: integer
+            type: string
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Order'
+              $ref: '#/components/schemas/OrderDTO'
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDTO'
         '404':
           description: Nie znaleziono zamówienia o podanym identyfikatorze
     delete:
       summary: Usuń zamówienie o określonym identyfikatorze
+      operationId: deleteOrderById
       parameters:
         - name: id
           in: path
           required: true
           description: Identyfikator zamówienia
           schema:
-            type: integer
+            type: string
       responses:
         '204':
           description: Usunięto
@@ -211,142 +188,207 @@ paths:
   /customers/{id}/orders:
     get:
       summary: Pobierz wszystkie zamówienia użytkownika
+      operationId: getCustomerOrders
       parameters:
         - name: id
           in: path
           required: true
           description: Identyfikator użytkownika
           schema:
-            type: integer
+            type: string
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OrderDTO'
         '404':
           description: Nie znaleziono klienta o podanym identyfikatorze
   /drivers:
     get:
       summary: Pobierz wszystkich kierowców
+      operationId: getAllDrivers
       responses:
         '200':
           description: Lista wszystkich kierowców
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DriverDTO'
     post:
       summary: Dodaj nowego kierowcę
+      operationId: createDriver
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Order'
+              $ref: '#/components/schemas/DriverDTO'
       responses:
         '201':
           description: Kierowca został dodany
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DriverDTO'
         '400':
           description: Nieprawidłowe dane kierowcy
   /drivers/{id}:
     get:
       summary: Pobierz kierowcę o określonym identyfikatorze
+      operationId: getDriverById
       parameters:
         - in: path
           name: id
           description: Identyfikator kierowcy
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         '200':
           description: Szczegóły kierowcy
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DriverDTO'
         '404':
           description: Kierowca o podanym identyfikatorze nie istnieje
     put:
       summary: Zaktualizuj kierowcę o określonym identyfikatorze
+      operationId: updateDriverById
       parameters:
         - in: path
           name: id
           description: Identyfikator kierowcy
           required: true
           schema:
-            type: integer
+            type: string
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Driver'
+              $ref: '#/components/schemas/DriverDTO'
       responses:
         '200':
           description: Kierowca został zaktualizowany
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DriverDTO'
         '400':
           description: Nieprawidłowe dane kierowcy
         '404':
           description: Kierowca o podanym identyfikatorze nie istnieje
     delete:
       summary: Usuń kierowcę o określonym identyfikatorze
+      operationId: deleteDriverById
       parameters:
         - in: path
           name: id
           description: Identyfikator kierowcy
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         '204':
           description: Kierowca został usunięty
         '404':
           description: Kierowca o podanym identyfikatorze nie istnieje
-  /orders/{orderId}/shipment:
+  /orders/{orderId}/tracking:
     get:
       summary: Śledzenie przesyłki zamówienia o określonym identyfikatorze
+      operationId: getOrderTracking
+
       parameters:
         - in: path
           name: orderId
           description: Identyfikator zamówienia
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         '200':
           description: Szczegóły przesyłki
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TrackingDTO'
         '404':
           description: Zamówienie o podanym identyfikatorze nie istnieje
     put:
       summary: Aktualizuj dane przesyłki zamówienia
+      operationId: updateOrderTracking
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TrackingDTO'
       parameters:
         - in: path
           name: orderId
           description: Identyfikator zamówienia
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         '200':
-          description: Szczegóły przesyłki
+          description: Zaktualizowano dane przesyłki
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TrackingDTO'
         '404':
           description: Zamówienie o podanym identyfikatorze nie istnieje
 
 components:
   schemas:
-    Order:
+    OrderDTO:
       type: object
       properties:
         id:
-          type: integer
-        customer:
-          type: object
+          type: string
+        customerId:
+          type: string
         senderAddress:
-          type: object
+          type: string
         receiverAddress:
-          type: object
+          type: string
         packageType:
           type: string
         packageSize:
           type: string
-        shipment:
-          type: object
-    Driver:
+        deliveryDate:
+          type: string
+          format: date
+        status:
+          type: string
+
+    DriverDTO:
       type: object
       properties:
         id:
-          type: integer
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        phone:
+          type: string
+
+    CustomerDTO:
+      type: object
+      properties:
+        id:
+          type: string
         firstName:
           type: string
         lastName:
@@ -356,47 +398,21 @@ components:
         phone:
           type: string
         address:
-          type: object
-    Customer:
+          type: string
+
+    TrackingDTO:
       type: object
       properties:
         id:
-          type: integer
-        firstName:
           type: string
-        lastName:
+        orderId:
           type: string
-        email:
+        eventType:
           type: string
-        phone:
-          type: string
-        address:
-          type: object
-    Address:
-      type: object
-      properties:
-        id:
-          type: integer
-        street:
-          type: string
-        city:
-          type: string
-        postalCode:
-          type: string
-        country:
-          type: string
-    Shipment:
-      type: object
-      properties:
-        id:
-          type: integer
-        driver:
-          type: object
-        order:
-          type: object
-        departureTime:
+        eventTime:
           type: string
           format: date
-        arrivalTime:
+        location:
           type: string
-          format: date
+        description:
+          type: string
